// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> MenuLink should render the "about" MenuLink UI without throwing an error 1`] = `
<Memo()
  current={false}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  label="Contact"
  menuActive={true}
  target="about"
  updateLocation={[MockFunction]}
>
  <styles__Container>
    <div
      className="styles__Container-sc-1w8m3j0-0 exuZum"
    >
      <styles__Label
        isCurrent={false}
        menuActive={true}
        onClick={[Function]}
        target="about"
      >
        <div
          className="styles__Label-sc-1w8m3j0-1 iuVxWO"
          onClick={[Function]}
          target="about"
        >
          Contact
        </div>
      </styles__Label>
      <Memo()
        isCurrent={false}
        location="about"
      >
        <styles__Content
          isCurrent={false}
        >
          <div
            className="styles__Content-xptth5-0 dwSYql"
          >
            <_default>
              <div>
                Meet the captain of the ship.
              </div>
            </_default>
          </div>
        </styles__Content>
      </Memo()>
    </div>
  </styles__Container>
</Memo()>
`;

exports[`Component -> MenuLink should render the "contact" MenuLink UI without throwing an error 1`] = `
<Memo()
  current={false}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  label="Contact"
  menuActive={true}
  target="contact"
  updateLocation={[MockFunction]}
>
  <styles__Container>
    <div
      className="styles__Container-sc-1w8m3j0-0 exuZum"
    >
      <styles__Label
        isCurrent={false}
        menuActive={true}
        onClick={[Function]}
        target="contact"
      >
        <div
          className="styles__Label-sc-1w8m3j0-1 gNJKpm"
          onClick={[Function]}
          target="contact"
        >
          Contact
        </div>
      </styles__Label>
      <Memo()
        isCurrent={false}
        location="contact"
      >
        <styles__Content
          isCurrent={false}
        >
          <div
            className="styles__Content-xptth5-0 dwSYql"
          >
            <_default>
              <div>
                For relaxing times, make it Suntory time.
              </div>
            </_default>
          </div>
        </styles__Content>
      </Memo()>
    </div>
  </styles__Container>
</Memo()>
`;

exports[`Component -> MenuLink should render the "work" MenuLink UI without throwing an error 1`] = `
<Memo()
  current={false}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  label="Contact"
  menuActive={true}
  target="work"
  updateLocation={[MockFunction]}
>
  <styles__Container>
    <div
      className="styles__Container-sc-1w8m3j0-0 exuZum"
    >
      <styles__Label
        isCurrent={false}
        menuActive={true}
        onClick={[Function]}
        target="work"
      >
        <div
          className="styles__Label-sc-1w8m3j0-1 dRRxBw"
          onClick={[Function]}
          target="work"
        >
          Contact
        </div>
      </styles__Label>
      <Memo()
        isCurrent={false}
        location="work"
      >
        <styles__Content
          isCurrent={false}
        >
          <div
            className="styles__Content-xptth5-0 dwSYql"
          >
            <_default>
              <div>
                Some things I've been working on.
              </div>
            </_default>
          </div>
        </styles__Content>
      </Memo()>
    </div>
  </styles__Container>
</Memo()>
`;
